@@ -82,7 +82,8 @@ data_files = [('share/netperf-wrapper/tests',
               ('share/doc/netperf-wrapper',
                ['BUGS',
                 'CHANGES',
-                'README.rst']),
+                'README.rst',
+                'netperf-wrapperrc.example']),
               ('share/man/man1',
                ['man/netperf-wrapper.1']),
               ('share/doc/netperf-wrapper/misc',
