@@ -1,3 +1,5 @@
+2013-03-01: Support an rcfile and supply an example file.
+
 2014-03-01: Add metadata output formatter to extract metadata from stored data files.
 
 2014-03-01: Add collection of several extended metadata items.
